
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int buf ;


 int MAXBUFFER ;
 char* NEWSUPDATE_PATH ;
 int NEWS_UPDATE ;
 int ROT ;
 int WEISS ;
 int check_directory (char*,char*) ;
 int exit (int) ;
 int news_update_exploit (char*,char*) ;
 int printf (char*) ;
 int strcat (char*,int ) ;
 int strncpy (char*,char*,int) ;
 int usage (char*) ;

int main(int argc, char **argv)
 {
   char buf[MAXBUFFER];

   if (argc < 2)
     {
       usage(argv[0]);
     }

   if (argc >= 3)
     {

       strncpy(buf, argv[2], sizeof(buf));
       if (check_directory(argv[1], buf) == -1)
         {
           ROT;
           printf("Error: The given directory was not found.\nPlease provide a different directory.\n");
           WEISS;
           exit(-1);
         }
       strcat(buf, NEWS_UPDATE);
     }
   else
     {

       strncpy(buf, NEWSUPDATE_PATH, sizeof(buf));
       if (check_directory(argv[1], buf) == -1)
         {
           ROT;
           printf("Error: The given directory was not found.\nPlease provide a different directory.\n");
           WEISS;
           exit(-1);
         }
       strcat(buf, NEWS_UPDATE);
    }


   news_update_exploit(argv[1], buf);
   return (0);
 }
