; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/cgi/webapps/extr_179.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/cgi/webapps/extr_179.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAXBUFFER = common dso_local global i32 0, align 4
@ROT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [81 x i8] c"Error: The given directory was not found.\0APlease provide a different directory.\0A\00", align 1
@WEISS = common dso_local global i32 0, align 4
@NEWS_UPDATE = common dso_local global i32 0, align 4
@NEWSUPDATE_PATH = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %8 = load i32, i32* @MAXBUFFER, align 4
  %9 = zext i32 %8 to i64
  %10 = call i8* @llvm.stacksave()
  store i8* %10, i8** %6, align 8
  %11 = alloca i8, i64 %9, align 16
  store i64 %9, i64* %7, align 8
  %12 = load i32, i32* %4, align 4
  %13 = icmp slt i32 %12, 2
  br i1 %13, label %14, label %19

14:                                               ; preds = %2
  %15 = load i8**, i8*** %5, align 8
  %16 = getelementptr inbounds i8*, i8** %15, i64 0
  %17 = load i8*, i8** %16, align 8
  %18 = call i32 @usage(i8* %17)
  br label %19

19:                                               ; preds = %14, %2
  %20 = load i32, i32* %4, align 4
  %21 = icmp sge i32 %20, 3
  br i1 %21, label %22, label %41

22:                                               ; preds = %19
  %23 = load i8**, i8*** %5, align 8
  %24 = getelementptr inbounds i8*, i8** %23, i64 2
  %25 = load i8*, i8** %24, align 8
  %26 = trunc i64 %9 to i32
  %27 = call i32 @strncpy(i8* %11, i8* %25, i32 %26)
  %28 = load i8**, i8*** %5, align 8
  %29 = getelementptr inbounds i8*, i8** %28, i64 1
  %30 = load i8*, i8** %29, align 8
  %31 = call i32 @check_directory(i8* %30, i8* %11)
  %32 = icmp eq i32 %31, -1
  br i1 %32, label %33, label %38

33:                                               ; preds = %22
  %34 = load i32, i32* @ROT, align 4
  %35 = call i32 @printf(i8* getelementptr inbounds ([81 x i8], [81 x i8]* @.str, i64 0, i64 0))
  %36 = load i32, i32* @WEISS, align 4
  %37 = call i32 @exit(i32 -1) #4
  unreachable

38:                                               ; preds = %22
  %39 = load i32, i32* @NEWS_UPDATE, align 4
  %40 = call i32 @strcat(i8* %11, i32 %39)
  br label %58

41:                                               ; preds = %19
  %42 = load i8*, i8** @NEWSUPDATE_PATH, align 8
  %43 = trunc i64 %9 to i32
  %44 = call i32 @strncpy(i8* %11, i8* %42, i32 %43)
  %45 = load i8**, i8*** %5, align 8
  %46 = getelementptr inbounds i8*, i8** %45, i64 1
  %47 = load i8*, i8** %46, align 8
  %48 = call i32 @check_directory(i8* %47, i8* %11)
  %49 = icmp eq i32 %48, -1
  br i1 %49, label %50, label %55

50:                                               ; preds = %41
  %51 = load i32, i32* @ROT, align 4
  %52 = call i32 @printf(i8* getelementptr inbounds ([81 x i8], [81 x i8]* @.str, i64 0, i64 0))
  %53 = load i32, i32* @WEISS, align 4
  %54 = call i32 @exit(i32 -1) #4
  unreachable

55:                                               ; preds = %41
  %56 = load i32, i32* @NEWS_UPDATE, align 4
  %57 = call i32 @strcat(i8* %11, i32 %56)
  br label %58

58:                                               ; preds = %55, %38
  %59 = load i8**, i8*** %5, align 8
  %60 = getelementptr inbounds i8*, i8** %59, i64 1
  %61 = load i8*, i8** %60, align 8
  %62 = call i32 @news_update_exploit(i8* %61, i8* %11)
  store i32 0, i32* %3, align 4
  %63 = load i8*, i8** %6, align 8
  call void @llvm.stackrestore(i8* %63)
  %64 = load i32, i32* %3, align 4
  ret i32 %64
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @usage(i8*) #2

declare dso_local i32 @strncpy(i8*, i8*, i32) #2

declare dso_local i32 @check_directory(i8*, i8*) #2

declare dso_local i32 @printf(i8*) #2

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #3

declare dso_local i32 @strcat(i8*, i32) #2

declare dso_local i32 @news_update_exploit(i8*, i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
